@@ -41,7 +41,7 @@
    right edge. Make craters wrap around the image (enables tiling of image).
  */
 
-#define _XOPEN_SOURCE   /* get M_PI in math.h */
+#define _XOPEN_SOURCE 500  /* get M_PI in math.h */
 
 #include <assert.h>
 #include <math.h>
